# mini-project

./: CMakeLists.txt  README.md
01_gcd/: gcd.c  lcm.c  tests.c
include/: algebra.h  number_theory.h
src/math/01_number_theory/: number_theory.c
src/math/02_algebra/: algebra.c
src/tests/: 01_number_theory_test.c
tests/: 01_number_theory_test.c  02_algebra_test.c  CMakeLists.txt
